Import of DCANTRELL/XML-Tiny-1.05 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      1.05
gitpan-cpan-path:         DCANTRELL/XML-Tiny-1.05.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
-1.04    2007-XXXXX    Optionally reject documents with ENTITY and DOCTYPE
+1.05    2007-02-27    Localised warnings;
+                      Better testing of filehandles
+                        (both thanks to SAPER)
+
+1.04    2007-02-11    Optionally reject documents with ENTITY and DOCTYPE
                         declarations;
                       Optionally pass entities through without decoding 'em;
                       Optionally get all bondage-and-discpline about entities;
