Import of DCANTRELL/XML-Tiny-1.06 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      1.06
gitpan-cpan-path:         DCANTRELL/XML-Tiny-1.06.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.06    2007-03-04    Fixed bug in open tags with no attributes and a single
+                        whitespace char between the name and the >.  Thanks
+                        to Gary Ansok.
+
 1.05    2007-02-27    Localised warnings;
                       Better testing of filehandles
                         (both thanks to SAPER)
