Import of DCANTRELL/XML-Tiny-1.08 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      1.08
gitpan-cpan-path:         DCANTRELL/XML-Tiny-1.08.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.08    2007-10-25    Fixed another bug in self-closing tags, introduced in
+                        1.07 and again reported by Sergio.
+
 1.07    2007-10-24    Fixed bug in self-closing tags, thanks to Sergio
                         Fanchiotti.
                       Added POD tests.
