Import of DCANTRELL/XML-Tiny-1.10 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      1.10
gitpan-cpan-path:         DCANTRELL/XML-Tiny-1.10.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.10    XXXX-XX-XX    POD tests no longer require Test::More
+
+1.09    2007-10-29    Fixed filehandle localisation bug
+
 1.08    2007-10-25    Fixed another bug in self-closing tags, introduced in
                         1.07 and again reported by Sergio.
 
