--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
+1.12    2008-01-22    Fixed bug in handling strings of XML with newlines in
+
 1.11    2007-11-01    Fix broken TAP in POD tests
 
-1.10    2007-10-29    POD tests no longer require Test::More
+1.10    2007-10-29    POD tests no longer require Test::More (thanks
+                        to Jonathan Stowe for pointing this bug out)
 
 1.09    2007-10-29    Fixed filehandle localisation bug
 
