--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2.0     2009-03-22    Add parsedommish() constructor, taken from
+                        experimental rsnapshot fork
+
 1.12    2008-01-22    Fixed bug in handling strings of XML with newlines in
 
 1.11    2007-11-01    Fix broken TAP in POD tests
