Import of DCANTRELL/XML-Tiny-2.01 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      2.01
gitpan-cpan-path:         DCANTRELL/XML-Tiny-2.01.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2.01    2009-03-23    Remove values() method from DOMmish interface - not
+                        needed because we have ...->element('*')
+
 2.0     2009-03-22    Add parsedommish() constructor, taken from
                         experimental rsnapshot fork
 
