--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2.02    2009-03-24    Back out the DOMmish stuff, and move that into a
+                        seperate distribution - XML-Tiny-DOM
+
 2.01    2009-03-23    Remove values() method from DOMmish interface - not
                         needed because we have ...->element('*')
 
