--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2.03    2010-01-13    Bugfix: element and attribute names can begin with
+                        an underscore
+
 2.02    2009-03-24    Back out the DOMmish stuff, and move that into a
                         seperate distribution - XML-Tiny-DOM
 
