--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.04    2010-04-22    Bugfix: CDATA in attribute may contain quote chars
+
 2.03    2010-01-13    Bugfix: element and attribute names can begin with
                         an underscore
 
