Import of DCANTRELL/XML-Tiny-2.05 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      2.05
gitpan-cpan-path:         DCANTRELL/XML-Tiny-2.05.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.05    2010-08-13    Bugfix: BOMs exist
+
 2.04    2010-04-22    Bugfix: CDATA in attribute may contain quote chars
 
 2.03    2010-01-13    Bugfix: element and attribute names can begin with
