Import of DCANTRELL/XML-Tiny-2.06 from CPAN.
gitpan-cpan-distribution: XML-Tiny
gitpan-cpan-version:      2.06
gitpan-cpan-path:         DCANTRELL/XML-Tiny-2.06.tar.gz
gitpan-cpan-author:       DCANTRELL
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.06    2010-12-16    Better error reporting
+
 2.05    2010-08-13    Bugfix: BOMs exist
 
 2.04    2010-04-22    Bugfix: CDATA in attribute may contain quote chars
